# qauth

./: .dockerignore  .env.docker.example  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MVP-PRD.md  Makefile  NOTICE  PR_DETAILS.md  README.md  commitlint.config.js  commitlint.config.mjs  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
.claude/agents/: auth-specialist.md  code-reviewer.md  debugger.md  pr-opener.md  product-manager.md
.cursor/plans/: 01.minimal-database.plan.md  02.minimal-redis.plan.md
.cursor/rules/: errors.mdc  fastify.mdc  language.mdc  (+3 more)
docs/: README.md  agent-authorization.md  agent-scope-modes.md  api-reference.md  browser-security.md  code-examples.md  development.md  docker.md  environment-authorization.md  hybrid-signing-verifier-guide.md  mcp-quickstart.md  oauth-flow.md  observability.md  oidf-op-certification-runbook.md
libs/core/crypto-native/: .gitignore  Cargo.toml  README.md  deny.toml  package.json  project.json  rust-toolchain.toml
libs/core/crypto-native/.cargo/: config.toml
libs/core/crypto-native/scripts/: write-addon-checksums.mjs
libs/core/crypto-native/src/: addon-integrity.test.ts  addon-integrity.ts  addon.ts  bench.ts  index.test.ts  index.ts  lib.rs
scripts/: init-db.sql  test-docker.sh
(+686 files in other folders)
